src/components/Users.module.css
@import url("https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap");

* {
  font-family: "Saira", sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.main-container {
  width: 100%;
  min-height: 90vh;
  max-height: 90vh;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  gap: 30px;
  padding: 50px;
  border-radius: 6px;
  border: 1px solid grey;
}

.input-container {
  display: flex;
  align-items: center;
  gap: 20px;
}

input {
  width: 200px;
  height: 30px;
  padding-left: 10px;
  border: none;
  border-radius: 6px;
  box-shadow: 0 0 2px rgb(60, 60, 60);
}

.input-container button {
  width: 100px;
  height: 30px;
  background: white;
  border: none;
  border-radius: 6px;
  box-shadow: 0 0 2px rgb(60, 60, 60);
  cursor: pointer;
  transition: all 0.2s ease;
}

.input-container button:hover,
.user-container:hover {
  background: rgb(241, 241, 241);
}

.input-container button:active {
  translate: 0 1px;
  background: rgb(226, 226, 226);
}

ul {
  width: 100%;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  list-style: none;
}

.user-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 300px;
  height: 60px;
  margin-bottom: 20px;
  padding: 5px 10px;
  background: white;
  border-radius: 6px;
  border: 1px solid rgba(189, 175, 140, 0.5);
  transition: all 0.2s ease;
}

